install_data('AccountService.v1_11_1.json', install_dir: 'share/www/redfish/v1/JsonSchemas/AccountService/', rename: 'AccountService.json')
install_data('ActionInfo.v1_3_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ActionInfo/', rename: 'ActionInfo.json')
install_data('Assembly.v1_4_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Assembly/', rename: 'Assembly.json')
install_data('AttributeRegistry.v1_3_6.json', install_dir: 'share/www/redfish/v1/JsonSchemas/AttributeRegistry/', rename: 'AttributeRegistry.json')
install_data('Bios.v1_2_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Bios/', rename: 'Bios.json')
install_data('Cable.v1_2_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Cable/', rename: 'Cable.json')
install_data('CableCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/CableCollection/', rename: 'CableCollection.json')
install_data('Certificate.v1_6_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Certificate/', rename: 'Certificate.json')
install_data('CertificateCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/CertificateCollection/', rename: 'CertificateCollection.json')
install_data('CertificateLocations.v1_0_2.json', install_dir: 'share/www/redfish/v1/JsonSchemas/CertificateLocations/', rename: 'CertificateLocations.json')
install_data('CertificateService.v1_0_4.json', install_dir: 'share/www/redfish/v1/JsonSchemas/CertificateService/', rename: 'CertificateService.json')
install_data('Chassis.v1_21_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Chassis/', rename: 'Chassis.json')
install_data('ChassisCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ChassisCollection/', rename: 'ChassisCollection.json')
install_data('ComputerSystem.v1_19_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ComputerSystem/', rename: 'ComputerSystem.json')
install_data('ComputerSystemCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ComputerSystemCollection/', rename: 'ComputerSystemCollection.json')
install_data('Drive.v1_15_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Drive/', rename: 'Drive.json')
install_data('DriveCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/DriveCollection/', rename: 'DriveCollection.json')
install_data('EnvironmentMetrics.v1_3_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/EnvironmentMetrics/', rename: 'EnvironmentMetrics.json')
install_data('EthernetInterface.v1_9_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/EthernetInterface/', rename: 'EthernetInterface.json')
install_data('EthernetInterfaceCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/EthernetInterfaceCollection/', rename: 'EthernetInterfaceCollection.json')
install_data('Event.v1_7_1.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Event/', rename: 'Event.json')
install_data('EventDestination.v1_12_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/EventDestination/', rename: 'EventDestination.json')
install_data('EventDestinationCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/EventDestinationCollection/', rename: 'EventDestinationCollection.json')
install_data('EventService.v1_8_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/EventService/', rename: 'EventService.json')
install_data('Fan.v1_3_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Fan/', rename: 'Fan.json')
install_data('FanCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/FanCollection/', rename: 'FanCollection.json')
install_data('IPAddresses.v1_1_3.json', install_dir: 'share/www/redfish/v1/JsonSchemas/IPAddresses/', rename: 'IPAddresses.json')
install_data('JsonSchemaFile.v1_1_4.json', install_dir: 'share/www/redfish/v1/JsonSchemas/JsonSchemaFile/', rename: 'JsonSchemaFile.json')
install_data('JsonSchemaFileCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/JsonSchemaFileCollection/', rename: 'JsonSchemaFileCollection.json')
install_data('LogEntry.v1_13_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/LogEntry/', rename: 'LogEntry.json')
install_data('LogEntryCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/LogEntryCollection/', rename: 'LogEntryCollection.json')
install_data('LogService.v1_3_1.json', install_dir: 'share/www/redfish/v1/JsonSchemas/LogService/', rename: 'LogService.json')
install_data('LogServiceCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/LogServiceCollection/', rename: 'LogServiceCollection.json')
install_data('Manager.v1_16_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Manager/', rename: 'Manager.json')
install_data('ManagerAccount.v1_9_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ManagerAccount/', rename: 'ManagerAccount.json')
install_data('ManagerAccountCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ManagerAccountCollection/', rename: 'ManagerAccountCollection.json')
install_data('ManagerCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ManagerCollection/', rename: 'ManagerCollection.json')
install_data('ManagerDiagnosticData.v1_1_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ManagerDiagnosticData/', rename: 'ManagerDiagnosticData.json')
install_data('ManagerNetworkProtocol.v1_9_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ManagerNetworkProtocol/', rename: 'ManagerNetworkProtocol.json')
install_data('Memory.v1_16_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Memory/', rename: 'Memory.json')
install_data('MemoryCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/MemoryCollection/', rename: 'MemoryCollection.json')
install_data('Message.v1_1_2.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Message/', rename: 'Message.json')
install_data('MessageRegistry.v1_5_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/MessageRegistry/', rename: 'MessageRegistry.json')
install_data('MessageRegistryCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/MessageRegistryCollection/', rename: 'MessageRegistryCollection.json')
install_data('MessageRegistryFile.v1_1_3.json', install_dir: 'share/www/redfish/v1/JsonSchemas/MessageRegistryFile/', rename: 'MessageRegistryFile.json')
install_data('MessageRegistryFileCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/MessageRegistryFileCollection/', rename: 'MessageRegistryFileCollection.json')
install_data('MetricDefinition.v1_3_1.json', install_dir: 'share/www/redfish/v1/JsonSchemas/MetricDefinition/', rename: 'MetricDefinition.json')
install_data('MetricDefinitionCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/MetricDefinitionCollection/', rename: 'MetricDefinitionCollection.json')
install_data('MetricReport.v1_5_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/MetricReport/', rename: 'MetricReport.json')
install_data('MetricReportCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/MetricReportCollection/', rename: 'MetricReportCollection.json')
install_data('MetricReportDefinition.v1_4_2.json', install_dir: 'share/www/redfish/v1/JsonSchemas/MetricReportDefinition/', rename: 'MetricReportDefinition.json')
install_data('MetricReportDefinitionCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/MetricReportDefinitionCollection/', rename: 'MetricReportDefinitionCollection.json')
install_data('OemAccountService.v1_0_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/OemAccountService/', rename: 'index.json')
install_data('OemComputerSystem.json', install_dir: 'share/www/redfish/v1/JsonSchemas/OemComputerSystem/', rename: 'index.json')
install_data('OemManager.json', install_dir: 'share/www/redfish/v1/JsonSchemas/OemManager/', rename: 'index.json')
install_data('OemSession.v1_0_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/OemSession/', rename: 'index.json')
install_data('OemVirtualMedia.v1_0_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/OemVirtualMedia/', rename: 'index.json')
install_data('OperatingConfig.v1_0_2.json', install_dir: 'share/www/redfish/v1/JsonSchemas/OperatingConfig/', rename: 'OperatingConfig.json')
install_data('OperatingConfigCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/OperatingConfigCollection/', rename: 'OperatingConfigCollection.json')
install_data('PCIeDevice.v1_10_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/PCIeDevice/', rename: 'PCIeDevice.json')
install_data('PCIeDeviceCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/PCIeDeviceCollection/', rename: 'PCIeDeviceCollection.json')
install_data('PCIeFunction.v1_4_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/PCIeFunction/', rename: 'PCIeFunction.json')
install_data('PCIeFunctionCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/PCIeFunctionCollection/', rename: 'PCIeFunctionCollection.json')
install_data('PCIeSlots.v1_5_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/PCIeSlots/', rename: 'PCIeSlots.json')
install_data('PhysicalContext.json', install_dir: 'share/www/redfish/v1/JsonSchemas/PhysicalContext/', rename: 'PhysicalContext.json')
install_data('Power.v1_7_1.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Power/', rename: 'Power.json')
install_data('PowerSubsystem.v1_1_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/PowerSubsystem/', rename: 'PowerSubsystem.json')
install_data('PowerSupply.v1_5_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/PowerSupply/', rename: 'PowerSupply.json')
install_data('PowerSupplyCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/PowerSupplyCollection/', rename: 'PowerSupplyCollection.json')
install_data('Privileges.v1_0_5.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Privileges/', rename: 'Privileges.json')
install_data('Processor.v1_16_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Processor/', rename: 'Processor.json')
install_data('ProcessorCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ProcessorCollection/', rename: 'ProcessorCollection.json')
install_data('Redundancy.v1_4_1.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Redundancy/', rename: 'Redundancy.json')
install_data('Resource.v1_14_1.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Resource/', rename: 'Resource.json')
install_data('Role.v1_3_1.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Role/', rename: 'Role.json')
install_data('RoleCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/RoleCollection/', rename: 'RoleCollection.json')
install_data('Sensor.v1_6_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Sensor/', rename: 'Sensor.json')
install_data('SensorCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/SensorCollection/', rename: 'SensorCollection.json')
install_data('ServiceRoot.v1_14_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ServiceRoot/', rename: 'ServiceRoot.json')
install_data('Session.v1_5_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Session/', rename: 'Session.json')
install_data('SessionCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/SessionCollection/', rename: 'SessionCollection.json')
install_data('SessionService.v1_1_8.json', install_dir: 'share/www/redfish/v1/JsonSchemas/SessionService/', rename: 'SessionService.json')
install_data('Settings.v1_3_5.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Settings/', rename: 'Settings.json')
install_data('SoftwareInventory.v1_8_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/SoftwareInventory/', rename: 'SoftwareInventory.json')
install_data('SoftwareInventoryCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/SoftwareInventoryCollection/', rename: 'SoftwareInventoryCollection.json')
install_data('Storage.v1_13_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Storage/', rename: 'Storage.json')
install_data('StorageCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/StorageCollection/', rename: 'StorageCollection.json')
install_data('StorageController.v1_6_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/StorageController/', rename: 'StorageController.json')
install_data('StorageControllerCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/StorageControllerCollection/', rename: 'StorageControllerCollection.json')
install_data('Task.v1_6_1.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Task/', rename: 'Task.json')
install_data('TaskCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/TaskCollection/', rename: 'TaskCollection.json')
install_data('TaskService.v1_2_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/TaskService/', rename: 'TaskService.json')
install_data('TelemetryService.v1_3_1.json', install_dir: 'share/www/redfish/v1/JsonSchemas/TelemetryService/', rename: 'TelemetryService.json')
install_data('Thermal.v1_7_1.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Thermal/', rename: 'Thermal.json')
install_data('ThermalMetrics.v1_0_1.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ThermalMetrics/', rename: 'ThermalMetrics.json')
install_data('ThermalSubsystem.v1_0_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/ThermalSubsystem/', rename: 'ThermalSubsystem.json')
install_data('Triggers.v1_2_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/Triggers/', rename: 'Triggers.json')
install_data('TriggersCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/TriggersCollection/', rename: 'TriggersCollection.json')
install_data('UpdateService.v1_11_1.json', install_dir: 'share/www/redfish/v1/JsonSchemas/UpdateService/', rename: 'UpdateService.json')
install_data('VirtualMedia.v1_5_1.json', install_dir: 'share/www/redfish/v1/JsonSchemas/VirtualMedia/', rename: 'VirtualMedia.json')
install_data('VirtualMediaCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/VirtualMediaCollection/', rename: 'VirtualMediaCollection.json')
install_data('VLanNetworkInterface.v1_3_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/VLanNetworkInterface/', rename: 'VLanNetworkInterface.json')
install_data('VLanNetworkInterfaceCollection.json', install_dir: 'share/www/redfish/v1/JsonSchemas/VLanNetworkInterfaceCollection/', rename: 'VLanNetworkInterfaceCollection.json')
install_data('odata.v4_0_5.json', install_dir: 'share/www/redfish/v1/JsonSchemas/odata/', rename: 'odata.json')
install_data('odata-v4.json', install_dir: 'share/www/redfish/v1/JsonSchemas/odata-v4/', rename: 'odata-v4.json')
install_data('redfish-error.v1_0_1.json', install_dir: 'share/www/redfish/v1/JsonSchemas/redfish-error/', rename: 'redfish-error.json')
install_data('redfish-payload-annotations.v1_2_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/redfish-payload-annotations/', rename: 'redfish-payload-annotations.json')
install_data('redfish-schema.v1_8_0.json', install_dir: 'share/www/redfish/v1/JsonSchemas/redfish-schema/', rename: 'redfish-schema.json')
install_data('redfish-schema-v1.json', install_dir: 'share/www/redfish/v1/JsonSchemas/redfish-schema-v1/', rename: 'redfish-schema-v1.json')
