install_data('AccountService_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('ActionInfo_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('Assembly_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('AttributeRegistry_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('Bios_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('Cable_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('CableCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('Certificate_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('CertificateCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('CertificateLocations_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('CertificateService_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('Chassis_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('ChassisCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('ComputerSystem_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('ComputerSystemCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('Drive_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('DriveCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('EnvironmentMetrics_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('EthernetInterface_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('EthernetInterfaceCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('Event_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('EventDestination_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('EventDestinationCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('EventService_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('Fan_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('FanCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('IPAddresses_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('JsonSchemaFile_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('JsonSchemaFileCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('LogEntry_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('LogEntryCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('LogService_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('LogServiceCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('Manager_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('ManagerAccount_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('ManagerAccountCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('ManagerCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('ManagerDiagnosticData_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('ManagerNetworkProtocol_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('Memory_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('MemoryCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('Message_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('MessageRegistry_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('MessageRegistryCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('MessageRegistryFile_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('MessageRegistryFileCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('MetricDefinition_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('MetricDefinitionCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('MetricReport_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('MetricReportCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('MetricReportDefinition_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('MetricReportDefinitionCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('OperatingConfig_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('OperatingConfigCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('PCIeDevice_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('PCIeDeviceCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('PCIeFunction_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('PCIeFunctionCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('PhysicalContext_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('PCIeSlots_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('Power_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('PowerSubsystem_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('PowerSupply_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('PowerSupplyCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('Privileges_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('Processor_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('ProcessorCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('RedfishError_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('RedfishExtensions_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('Redundancy_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('Resource_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('Role_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('RoleCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('Sensor_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('SensorCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('ServiceRoot_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('Session_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('SessionCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('SessionService_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('Settings_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('SoftwareInventory_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('SoftwareInventoryCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('Storage_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('StorageCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('StorageController_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('StorageControllerCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('Task_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('TaskCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('TaskService_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('TelemetryService_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('Thermal_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('ThermalMetrics_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('ThermalSubsystem_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('Triggers_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('TriggersCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('UpdateService_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('VLanNetworkInterfaceCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('VLanNetworkInterface_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('VirtualMedia_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('VirtualMediaCollection_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('OemAccountService_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('OemComputerSystem_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('OemManager_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('OemSession_v1.xml', install_dir: 'share/www/redfish/v1/schema')
install_data('OemVirtualMedia_v1.xml', install_dir: 'share/www/redfish/v1/schema')
